Release 2.13

#284 Cayenne 4.0.RC1 is out... upgrading
#296 Implement explicit processing of query parameters without uriInfo

Release 2.12

#276 Support OffsetDateTime
#282 Default server side size limitation works incorrectly

Release 2.11

#200 Automatic JSON to POJO deserialization in LR client
#273 Intermittent error in UtcDateConverterTest.testConverter_javaUtilDate test
#275 Stop rendering timezone for all date/time values
#278 ISO encoding of Java 8 date/time in mapBy keys

Release 2.10

#245 module auto-loading
#253 meta: explicit base URL for misconfigured proxies
#254 Upgrade to Jackson 2.6.4
#255 Support for constraints in MetadataBuilder
#256 Built-in JsonValueConverter for enums
#258 "AdHoc" properties
#259 NPE in metadata resource when the model has unknown attribute types
#260 LrEntityOverlay.addAttribute(String) must detect attribute type
#261 Rename @Resource to @LrResource and move to link-rest-annotations
#263 link-rest-sencha module
#267 POST: java.util.Date to Timestamp conversion
#269 Upgrade to Cayenne 4.0.B2

Release 2.9

#247 Split Lr annotations in a separate jar
#252 link-rest-bom

Release 2.8

#250 Fix stage method generics boundaries

Release 2.7

#235 Allow Pojo attributes of type java.util.Collection
#238 Dynamic relationships do not work with "mapBy"
#239 Add ResourceEntity.setQualifier(..) method.
#240 Functional select pipeline interceptors
#241 Functional update pipeline interceptors
#242 Functional delete pipeline
#243 Functional pipeline for unrelate and meta chains
#244 Remove API deprecated on or before 2.0

Release 2.6

#234 Error reading relationships: Multi-join relationship propagation is not supported yet

Release 2.5

#225 Support constraining FK updates
#229 POST and PUT methods doesn't supports content type header with charset
#230 Generic object API and type conversion problems
#233 (2.x) Upgrade to Cayenne 4.0.B1

Release 2.4

#212 Upgrade to Cayenne 4.0.M4
#214 Immutable constraint objects