@@ -3,7 +3,6 @@ package com.nhl.link.rest.runtime.parser.sort;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.nhl.link.rest.ResourceEntity;
 
-import javax.ws.rs.core.UriInfo;
 import java.util.List;
 import java.util.Map;
 
@@ -11,16 +10,6 @@ import java.util.Map;
  * @since 1.5
  */
 public interface ISortProcessor {
-
-    /**
-     * @deprecated since 2.5 in fvaor of {@link #process(ResourceEntity, Map)}.
-     */
-    @Deprecated
-    default void process(ResourceEntity<?> entity, UriInfo uriInfo) {
-        if(uriInfo != null) {
-            process(entity, uriInfo.getQueryParameters());
-        }
-    }
 
     /**
      * @since 2.5
